# eggchan-rs

./: .env  Cargo.toml  README.md  testdata.sql
migrations/2018-06-03-233235_init/: down.sql  up.sql
src/: db.rs  egg-ctl.rs  main.rs  messages.rs  models.rs  responses.rs  schema.rs
