[package]
name = "eggchan"
version = "0.1.0"
authors = ["Adam <sector-f@users.noreply.github.com>"]

[[bin]]
name = "eggchan"
path = "src/main.rs"

[[bin]]
name = "egg-ctl"
path = "src/egg-ctl.rs"

[dependencies]
actix = "0.5.7"
actix-web = "0.6.10"
diesel = { version = "1.3.0", features = ["postgres", "chrono"] }
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
chrono = { version = "0.4.2", features = ["serde"] }
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.20"
failure = "0.1.1"
futures = "0.1.21"
clap = "2.31.2"
